--- a/src/style.css
+++ b/src/style.css
@@ -41,16 +41,21 @@ body {
   box-shadow: 2px 3px 0 black;
 }
 
-.score-list ul li {
+ul {
+  max-height: 300px;
+  overflow: scroll;
+}
+
+ul li {
   list-style-type: none;
 }
 
-.score-list ul li:nth-child(even) {
+ul li:nth-child(even) {
   background-color: rgb(185, 180, 180);
   height: 30px;
 }
 
-.score-list ul li:nth-child(odd) {
+ul li:nth-child(odd) {
   background-color: #fff;
   height: 30px;
 }
